Networking/Service Mesh/applications/frontend-backend/files/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend-gateway
spec:
  servers:
    - hosts:
        - 'frontend-backend.apps.mycluster.nancyge.com'
      port:
        name: http
        number: 80
        protocol: HTTP
  selector:
    istio: ingressgateway
