Networking/Service Mesh/applications/frontend-backend/files/vs-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: gateway
spec:
  hosts:
  - "*"
  gateways:
  - frontend-gateway
  http:
  - route:
    - destination:
        host: frontend.test-frontend-backend.svc.cluster.local
      weight: 100
